# HW_14_1

./: .gitignore  README.md  pyproject.toml
html/: class_index.html  function_index.html  index.html  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_main_py.html  z_a44f0ac069e85531___init___py.html  z_a44f0ac069e85531_test_main_py.html  z_a44f0ac069e85531_tests_py.html
src/: main.py
tests/: test_main.py
